# ValeTTS-Colab

./: .gitignore  .pre-commit-config.yaml  .yamllint.yaml  03_train_vits2_colab_fixed.ipynb  04_vits2_realistic_colab.ipynb  CHANGELOG.md  COLAB_TROUBLESHOOTING.md  LICENSE  Makefile  README.md  README_COLAB_COMPLETO.md  colab_training_vits2.ipynb  colab_training_vits2_english.ipynb  dev-setup.sh  gera-espanhol.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_training_simple.py  test_valetts_local.ipynb  tts_rv1909_20000.txt  update_github.sh  vits2_complete_fixed.py  vits2_realistic_colab.py
.cursor/rules/: valettsrule.mdc
.github/workflows/: ci.yml
colab_migration/notebooks/: 01_setup_colab.ipynb  02_train_vits2_openrouter.ipynb  03_monitoring_tensorboard.ipynb
configs/models/: vits2_base.yaml
configs/training/: llm_dynamic_config.yaml  llm_monitor_config.yaml  vits2_config.yaml  vits2_dataset_unificado.yaml  vits2_english_a100_optimized.yaml  vits2_english_dataset.yaml  vits2_english_debug.yaml  vits2_english_production.yaml  vits2_test_config.yaml  vits2_teste_rapido.yaml  vits2_training.yaml
docker/: Dockerfile.dev  docker-compose.yml
docs/: PLANO_ATUALIZADO_2025.md  PLANO_DE_TRABALHO.md
samples/epoch_000/: samples_summary.json
scripts/: analyze_text_dataset.py  analyze_voices.py  clean_duplicates.py  elevenlabs.txt  generate_dataset.py  generate_elevenlabs_dataset.py  generate_final_samples.py  inference.py  test_audio_generation.py  test_elevenlabs_american_voices.py  test_elevenlabs_voices.py  test_english_audio_generation.py  test_english_setup.py  train.py  train_vits2.py  train_vits2_english.py
tests/: __init__.py
tests/unit/: test_example.py
valetts/: __init__.py
valetts/data/: __init__.py
valetts/data/augmentation/: __init__.py  audio.py
valetts/data/datasets/: __init__.py  tts_dataset.py
valetts/data/generation/: __init__.py  audio_processor.py  dataset_builder.py  edge_tts_interface.py  elevenlabs_interface.py  text_generator.py
valetts/data/loaders/: __init__.py  english_tts.py  tts.py
valetts/data/preprocessing/: __init__.py  audio.py  text.py  text_en.py
valetts/evaluation/: __init__.py
valetts/inference/: __init__.py  synthesizers.py
valetts/inference/api/: __init__.py  endpoints.py  models.py  server.py
valetts/inference/synthesizers/: __init__.py  base.py  multilingual.py  tts.py
valetts/inference/voice_cloning/: __init__.py  adaptation.py  cloner.py  enrollment.py
valetts/models/: __init__.py
valetts/models/base/: __init__.py  config.py  layers.py  model.py
valetts/models/meta_learning/: __init__.py
valetts/models/prosody/: __init__.py
valetts/models/vits2/: __init__.py  config.py  decoder.py  discriminator.py  encoder.py  model.py
valetts/models/vocoders/: __init__.py
valetts/training/: __init__.py  audio_sampling.py
valetts/training/callbacks/: __init__.py  hybrid_checkpoint.py
valetts/training/monitoring/: __init__.py  config.py  historical_telemetry.py  human_approval.py  llm_monitor.py  safety.py
valetts/training/trainers/: __init__.py  base.py  vits2.py
valetts/utils/: __init__.py  audio.py  io.py  text.py  visualization.py
